--- a/src/tex/applications.tex
+++ b/src/tex/applications.tex
@@ -1,14 +1,14 @@
 \chapter{Applications}
 
 \section{Applications}
-In the current age, Sensor fusion are used in the systems which were only found in science fiction books and was just an imagination (e.g. self driving car). It has become the key component for moving object detection and tracking\cite{Cho_2014, Chavez_Garcia_2016}, obstacle detection\cite{Shinzato_2014} which are the most challenging task in the application domain of autonomous driving cars. In the following parts of this paper, some of the successful application of sensor fusion is described.
+In the current age, Sensor fusion is used in the systems which were only found in science fiction books and were just an imagination (e.g. self driving car). It has become the key component for moving object detection and tracking\cite{Cho_2014, Chavez_Garcia_2016}, obstacle detection\cite{Shinzato_2014} which are the most challenging task in the application domain of autonomous driving cars. In the following parts of this paper, some of the successful applications of sensor fusion are described.
 
 
 \section{Multiple Sensor Fusion for Moving Object Detection and Tracking}
-The intelligent vehicles are now becoming capable of instruct themselves to drive in very dynamic and unstructured environment. But driving in such an environment increase uncertainty. One of the uncertain task is to moving object detection and tracking. Perceiving the environment involves the selection of different sensors to obtain a detailed description of the environment and an accurate identification of the objects of interest\cite{Chavez_Garcia_2016}. So, Fusion of multiple sensor could decrease the uncertainly in moving object detection task. In the following, two different approaches are described for moving object detection which are different in the view point of the sensors.
+The intelligent vehicles are now becoming capable of instruct themselves to drive in very dynamic and unstructured environment. But driving in such an environment increases uncertainty. One of the uncertain task is moving object detection and tracking. Perceiving the environment involves the selection of different sensors to obtain a detailed description of the environment and an accurate identification of the objects of interest\cite{Chavez_Garcia_2016}. So, Fusion of multiple sensors could decrease the uncertainly in moving object detection task. In the following, two different approaches are described for moving object detection which are different in the view point of the sensors.
 
 \subsection{Front View Approach}
-In \cite{Chavez_Garcia_2016}, an advanced driver assistance systems (ADAS) is introduced which main task is to help the drivers to avoid dangerous situations. ADAS assists with warning messages in dangerous driving situations (e.g., possible collisions), activation of safety devices to mitigate imminent collisions, autonomous maneuvers to avoid obstacles, and attention-less driver warnings\cite{Chavez_Garcia_2016}. There are two major tasks to perceive the environment. The task simultaneous localization and mapping (SLAM) is one of and another one is to detect and track the moving objects (DATMO). The model of perception task is shown in figure \ref{fig:datmoslam}.
+In \cite{Chavez_Garcia_2016}, an advanced driver assistance systems (ADAS) is introduced whoose main task is to help the drivers to avoid dangerous situations. ADAS assists with warning messages in dangerous driving situations (e.g., possible collisions), activation of safety devices to mitigate imminent collisions, autonomous maneuvers to avoid obstacles, and attention-less driver warnings\cite{Chavez_Garcia_2016}. There are two major tasks to perceive the environment. The task simultaneous localization and mapping (SLAM) is one of and another one is to detect and track the moving objects (DATMO). The model of perception task is shown in figure \ref{fig:datmoslam}.
 \begin{figure}
   \centering
   \includegraphics[width=.6\textwidth]{src/pic/datmo_slam_arch.png}
@@ -16,16 +16,17 @@ In \cite{Chavez_Garcia_2016}, an advanced driver assistance systems (ADAS) is in
   \label{fig:datmoslam}
 \end{figure}
 \begin{description}
-    \item[SLAM:] could be defined as follows. A self driving car is moving in an unknown environment and it starts moving from a known location. Meanwhile, it's motion is uncertain which makes the determination of it's global position more difficult. As it is moving, continuously it perceives the environment. In this situation, SLAM is the procedure of building a map of the environment while simultaneously calculating the cars position relative to the map\cite{Thrun2008}. More formally we can say, the SLAM problem asks if it is possible for a autonomous agent to move to an unknown location in an unknown, dynamic or unstructured environment and for the agent to incrementally build a consistent map of this environment while simultaneously determining its location within this map\cite{Bailey:1638022}.
-    \item[DATMO:] While SLAM creates a map of static objects including the position of the agent, DATMO uses the map  of static objects generated by SLAM \cite{Azim:6232303} to determine the object to be moving or static\cite{vu2008mapping}. On the other hand, by perform DATMO it is possible to get the position of moving objects around, track them and even predict the future behaviour of those moving objects\cite{vu2008mapping}.
+    \item[SLAM:] Could be defined as follows:\\
+    A self driving car is moving in an unknown environment and it starts moving from a known location. Meanwhile, it's motion is uncertain which makes the determination of it's global position more difficult. As it is moving, continuously it perceives the environment. In this situation, SLAM is the procedure of building a map of the environment while simultaneously calculating the cars position relative to the map\cite{Thrun2008}. More formally we can say, the SLAM problem asks if it is possible for a autonomous agent to move to an unknown location in an unknown, dynamic or unstructured environment and for the agent to incrementally build a consistent map of this environment while simultaneously determining its location within this map\cite{Bailey:1638022}.
+    \item[DATMO:] While SLAM creates a map of static objects including the position of the agent, DATMO uses the map  of static objects generated by SLAM \cite{Azim:6232303} to determine the object to be moved or static\cite{vu2008mapping}. On the other hand, by performing DATMO it is possible to get the position of moving objects around, track them and even predict the future behaviour of those moving objects\cite{vu2008mapping}.
 \end{description}
 
-It is assumed that the SLAM is a solved task. As a result it is more reasonable to focus on the DATMO\cite{Chavez_Garcia_2016}. DATMO is performed with an Evidential fusion approach where object classification is the key component. Additionally, Evidential fusion handle uncertainty of sensor detection. Actual goal is to find a list of moving objects with their velocity which should improves the ADAS.
+It is assumed that the SLAM is a solved task. As a result it is more reasonable to focus on the DATMO\cite{Chavez_Garcia_2016}. DATMO is performed with an Evidential fusion approach where object classification is the key component. Additionally, Evidential fusion handle uncertainty of sensor detection. Actual goal is to find a list of moving objects with their velocity which should improve the ADAS.
 
-Handling incomplete environment data is one of the important factor of assistance systems which leads to wrong perception. The reasons for incomplete sensor data are already described in the introduction section of this paper. Including incomplete information, there is another problem exists in the tracking process. The tracking process expects that all inputs are moving objects. But in the real world, environment consists of both moving and static objects. So, moving object detection is a very difficult task of moving object tracking system and various number of sensors need to work together to perform the task.
+Handling incomplete environment data is one of the important factors of assistance systems which leads to wrong perception. The reasons for incomplete sensor data are already described in the introduction section of this paper. Including incomplete information, there is another problem exists in the tracking process. The tracking process expects that all inputs are moving objects. But in the real world, environment consists of both moving and static objects. So, moving object detection is a very difficult task of moving object tracking system and various number of sensors need to work together to perform the task.
 
 \subsubsection{Environment Setup}
-In the experiment \cite{Chavez_Garcia_2016}, a Lancia Delta car is decorated with necessary equipment such as a processing unit for processing the image and create moving object list, some components which is responsible for driver interaction and the front - facing sensors i.e., Lidar, Camera and Radar. So the sensors only cover the front view of the vehicle as shown in figure \ref{fig:sensorcovarage}. An IBEO Lux laser scanner is used as the lidar sensor which can deliver a 2D list of impact points and it can cover all the points in the range of 200m. The radar is used to detect moving targets. It could detect targets within 150m and the velocity range up to 250kph. The camera would capture black and white images.
+In the experiment \cite{Chavez_Garcia_2016}, a Lancia Delta car is decorated with necessary equipment such as a processing unit to process the image and create moving object list, some components which is responsible for driver interaction and the front - facing sensors i.e., Lidar, Camera and Radar. So the sensors only cover the front view of the vehicle as shown in figure \ref{fig:sensorcovarage}. An IBEO Lux laser scanner is used as the lidar sensor which can deliver a 2D list of impact points and it can cover all the points in the range of 200m. The radar is used to detect moving targets. It could detect targets within 150m and the velocity range up to 250kph. The camera would capture black and white images.
 
 \subsubsection{System Architecture}
 The fusion process is performed in a Perception System (PS) which is developed according to improve the efficiency and increase the quality of sensor data. It tries to concentrate on object detecting and tracking to improve the data quality. The PS aims at detecting, classifying and tracking a set of moving objects of interest that may appear in front of the vehicle\cite{Chavez_Garcia_2016}. The structure of the  PS is shown in Figure \ref{fig:PS}. In this system, the fusion module is taking input directly from the three sensors. Initially lidar, radar and camera get the input from the environment and create a list of detected objects for each sensor. Those three lists are then provided to the fusion module. Each environment object is demonstrated by their position, size and evidence distribution of class hypotheses. On the other hand, classifications are done by the shape, relative speed and visual appearance of the detected objects. Precisely, the lidar and radar is performing the task of detection while camera is extracting the features of the detected objects to classify them. The fusion module fused the three list of objects and combined them into one list  where each object contains combined description. The ultimate output of the fusion method is provided to the tracking module to calculate the moving objects states which is actually the final output of the DATMO task. Three sensors are contribution in the task of moving object detection and tracking. The next sections are going to describe briefly how the the sensors prove information for detection and tracking.
@@ -202,10 +203,10 @@ The proposed perception system in \cite{Kunz_2015} is a hierarchical modular env
 
 \begin{enumerate}[label=\Alph*]
     \item Grid Mapping Layer: This layer turns the environment model into single grid cells and estimates each cells that how much the cell is occupied with the environment object\cite{Kunz_2015}. Classical occupancy grid mapping approach is followed for grid mapping which are not compatible for dynamic environments\cite{Kunz_2015}. Therefore, an improved  grid map is implemented which is capable of quickly adapting current situation. In the real implementation, the data of the three laser scanners is used as input. Actually, the grid map is used by the combination module to estimate static boundaries. New sensors can be integrated into the grid mapping layer by creating an inverse sensor model for the sensor as pre-processing filter as shown in Figure [grid-mapping]\cite{Kunz_2015}. The inverse sensor model determines the probability of occupancy of each grid cell by evaluating the sensor output which is called a measurement grid. In a nutshell, the grid mapping produce the result of estimated occupancy probability of every cell in the grid\cite{Kunz_2015}.
-    \item Localization Layer: 
+    \item Localization Layer: The location of the vehicle is estimated by the help of a concept called Monte-Carlo Localization (MCL) on a feature-based map representation. The feature map is extracted from the lower level grid map layer where the grid map is generated from three front facing leaser scanner using Maximally Stable Extremal Regions (MSERs). MSERs are robust features that are additionally extracted from gray-scale images within a pre-defined region of interest (ROI)\cite{Kunz_2015}. Grid map extracts features which may contain tree trunks, road signs, posts, etc. Grid map also can provide well-suited point landmarks for the localization process. On the other hand, camera extracts the lane markings\cite{Kunz_2015}. Due to generic approach, sensors can be replaced easily and even missing of one of them (leaser scanner or camera) could be handled. But  A missing laser scanner decreases the longitudinal precision, while a loss of camera measurements results in a larger lateral uncertainty\cite{Kunz_2015}.
+    \item Multi-Object Tracking: The tracking of dynamic objects in environment is realized by using a generic multi-sensor information fusion module. Radar, laser scanner and  video cameras are used as sensors in the fusion module. Raw data collected from sensors may contain large number of extra information which makes the fusion process computationally costly. To optimize this, some pre-processing filtering algorithms are applied in the sensors raw data to obtain the object hypothesis. The tracking system, introduced in \cite{Kunz_2015}, is using Labeled MultiBernoulli (LMB) filter for pre-processing. Each sensor is connected to the LMB filter using sensor specific measurement model. The generic measurement model provides measurement functions, field of views, detection probabilities and false positive probabilities. This measurement model facilitate the sensor integration process in a way that new sensors can be easily integrated by just implementing the sensor specific measurement model which needs no change in LMB filter.
+    \item Environment Model: The grid map, the localization result, the digital map and the object list are combined into a consistent environment model by the combination module. In a nutshell, the grid map is replaced by boundary lines which specify the driving space of the vehicle. Though the dynamic objects included in the grid map, they are just ignored while creating the boundary line.
 \end{enumerate}
 
-
 \subsection{Experimental Outcome}
-
-
+The experimental route used in \cite{Kunz_2015} is only 5 km long which includes a variety of challenges for autonomous vehicles: traffic lights, crosswalks, and roundabouts. Additionally, half of the track does not contain any lane markings. Additionally huge amount of pedestrians and other road users make the driving experience more difficult. The speed limit was restricted from 50 to 70 km/h. The combination of developed grid map and object tracking smoothly detects all road users and other visible obstacles. The localization module provides a very high accuracy of vehicle position. In the experiment, it is also realized that laser scanner can provide more accurate position. If only video is available the localization error increases due to utilization of the flat world assumption. Besides, laser only system has also some weakness. But still it is possible to recover single sensor limitations. In critical weather conditions, the high resolution video camera is influenced in its performance. If the video camera miss detect the land marks, the localization module automatically relies on laser scanners.
