--- a/src/tex/conclusion.tex
+++ b/src/tex/conclusion.tex
@@ -1,2 +1,2 @@
 \chapter{Conclusion}
-
+In this paper, we have discussed about very basic thing of sensor fusion concept. To have a clear idea, we have described all possible fusion categories and commonly used fusion models. After that, we summarize some of the sensor fusion applications which are successfully applied in the real world environment in real time. First two applications are more concerned about moving object detection with tracking and the third one implements sensor independent fusion approach which leads to a very dynamic sensor configuration. But at the end the main goal of all of them is same, i.e. to establish a high performing, cheap and highly available perception system which depends on a reliable sensor fusion module.
