--- a/src/tex/intro.tex
+++ b/src/tex/intro.tex
@@ -89,9 +89,9 @@ Generally, ET considers three situations, $\mathbb true$, $\mathbb false$ and no
 \begin{tabular}{|l|l|l|l|}
 \hline
  $m^{\prime}=C_{1}\oplus C_{2}$&  $m_{1}(S)=0.8$ & $m_{1}(U)=0.15$ & $m_{1}(\{S, U\})=0.5$ \\ \hline
- $m_{2}(S)=0.6$& $0.8x0.6=0.48$ & $\emptyset$ & $0.6x0.05=0.03$ \\ \hline
- $m_{1}(U)=0.2$& $\emptyset$ & $0.2x0.15=0.03$ & $0.2x0.05=0.01$ \\ \hline
- $m_{1}(\{S, U\})=0.3$& $0.3x0.8=0.24$ & $0.3x0.15=0.045$ & $0.3x0.05=0.015$ \\ \hline
+ $m_{2}(S)=0.6$& $0.8\cdot 0.6=0.48$ & $\emptyset$ & $0.6\cdot 0.05=0.03$ \\ \hline
+ $m_{1}(U)=0.2$& $\emptyset$ & $0.2\cdot 0.15=0.03$ & $0.2\cdot 0.05=0.01$ \\ \hline
+ $m_{1}(\{S, U\})=0.3$& $0.3\cdot 0.8=0.24$ & $0.3\cdot 0.15=0.045$ & $0.3\cdot 0.05=0.015$ \\ \hline
 \end{tabular}
 \end{table}
 By applying Dempster's rule, we get as follows:
